fixed text align for Work Board

--- a/src/App.css
+++ b/src/App.css
@@ -164,6 +164,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+  text-align: left;
   margin-bottom: 30px;
   gap: 20px;
 }
